# fitflow-routine

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: rust.yml
config/: dev.toml
docs/: observability.md  resilience.md  security.md
src/: api.rs  config.rs  errors.rs  events.rs  main.rs  metrics.rs  redis_pool.rs  sentry_tracing.rs
src/api/: assignments.rs  health.rs  mod.rs  routines.rs
