[package]
name = "routine"
version = "0.1.0"
edition = "2024"
authors = ["Ernesto Menéndez <pyalec@gmail.com>"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.42", features = ["logs", "tracing", "tower-axum-matched-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = {  version = "0.27", features = ["derive"] }
dotenvy = "0.15"
config = { version = "0.15", features = ["toml"] }
bb8 = "0.9"
bb8-redis = "0.24"
redis = "0.32"
